dream story rwd

--- a/css/dream_story.css
+++ b/css/dream_story.css
@@ -7,16 +7,22 @@
 *{
   box-sizing: border-box;
 }
- 
 body{
   margin: 0;
   padding: 0;
   font-family: 'Noto Sans TC', sans-serif;
   letter-spacing: 0.04em;
+  overflow: hidden;
+  overflow-y: scroll;
 } 
+img, embed{
+  max-width: 100%;
+}
+ 
 
+/*====== 部落格二欄式排版 ======*/
 div.parent_container{
-  width: 1080px;
+  width: 90%;
   /* border: 1px solid black; */
   display: flex;
   justify-content: space-between;
@@ -24,40 +30,43 @@ div.parent_container{
 
 }
 
+/*====== 行動版 RWD | 320px ~ 768px ======*/
+@media screen and (min-width: 320px) and (max-width: 767.98px){
+
+  div.parent_container{
+    display: flex;
+    flex-direction: column;
+    margin: 50px auto;
+  
+  }
+} 
+
+
+/*=== 左側文章區域 ===*/
 div.aside_left{
-  /* border: 1px solid red; */
   width: 60%;
 }
-
-/* div.title_area{
-  border: 1px solid black;
-} */
-
 div.article_title{
   font-size: 28px;
   letter-spacing: 0.04em;
   font-weight: 700;
   line-height: 150%;
 }
-
 div.date_block{
   padding: 16px 0 24px;
   font-size: 14px;
   font-family: 'Lato', sans-serif;
   letter-spacing: 0.04em;
 }
-
 a.author_link{
   color: black;
   text-decoration: none;
   border-bottom: 1px solid black;
 }
-
 img.article_img, embed.article_img{
   width: 100%;
   padding-top: 5px;
 }
-
 div.img_description{
   font-size: 14px;
   letter-spacing: 0.04em;
@@ -65,24 +74,20 @@ div.img_description{
   padding: 10px 0;
   color: #363B3F;
 }
-
 div.inner_title{
   font-size: 24px;
   letter-spacing: 0.04em;
   font-weight: 700;
   line-height: 150%;
 }
-
 div.text_content{
-  font-size: 15px;
+  font-size: 16px;
   padding: 16px 0;
   line-height: 200%;
 }
-
 div.inner_title{
   padding: 40px 0 10px;
 }
-
 div.tags_container{
   margin: 60px 0;
   padding-bottom: 20px;
@@ -91,7 +96,6 @@ div.tags_container{
   display: flex;
   justify-content: flex-start;
 }
-
 a.article_tag{
   text-decoration: none;
   color: black;
@@ -102,17 +106,14 @@ a.article_tag{
   font-size: 14px;
   letter-spacing: 0.04em;
 }
-
 a.article_tag:hover{
   background-color: #2869D1;
   color: white;
 }
-
 div.test_slogan{
   line-height: 180%;
   margin-bottom: 25px;
 }
-
 a.test{
   background-color: #2869D1;
   padding: 6px 18px 8px;
@@ -124,13 +125,77 @@ a.test{
   font-size: 15px;
   width: 115px;
 }
-
 a.test:hover{
   box-shadow: 1px 2px 2px 0px #00000040;
 }
 
+/*====== 行動版 RWD | 320px ~ 414px ======*/
+@media screen and (min-width: 320px) and (max-width: 413.98px){
+
+  div.aside_left{
+    width: 100%;
+  }
+  div.article_title{
+    font-size: 22px;
+  }  
+  div.inner_title{
+    font-size: 20px;
+  }
+  div.tags_container{
+    flex-wrap: wrap;
+    margin: 30px 0;
+  }
+  div.test_area{
+    margin-bottom: 30px;
+  }
+
+}  
+
+/*====== 行動版 RWD | 414px ~ 768px ======*/
+@media screen and (min-width: 414px) and (max-width: 767.98px){
+
+  div.aside_left{
+    width: 100%;
+  }
+  div.article_title{
+    font-size: 24px;
+  }  
+  div.inner_title{
+    font-size: 20px;
+  }
+  div.tags_container{
+    flex-wrap: wrap;
+    margin: 30px 0;
+  }
+  div.test_area{
+    margin-bottom: 30px;
+  }
+
+}  
 
 
+/*====== 行動版 RWD | 768px ~ 1150px ======*/
+@media screen and (min-width: 768px) and (max-width: 1149.98px){
+
+  div.aside_left{
+    width: 63%;
+  }
+  div.article_title{
+    font-size: 26px;
+  }  
+  div.inner_title{
+    font-size: 22px;
+  }
+  div.tags_container{
+    flex-wrap: wrap;
+    margin: 30px 0;
+  }
+  
+
+}  
+
+
+/*=== 右側廣告區域 ===*/
 div.aside_right{
   /* border: 1px solid blue; */
   width: 32%;
@@ -138,15 +203,13 @@ div.aside_right{
   flex-direction: column;
   justify-content: flex-start;
 }
-
 div.search_bar{
-  /* border: 1px solid red; */
   vertical-align: middle;
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
+  position: relative;
 }
-
 input[type="search"]{
   width: 100%;
   height: 30px;
@@ -155,55 +218,34 @@ input[type="search"]{
   border: none;
   border: 1px solid #C4C4C4;
   outline: none;
-  /* background-color: #ECEDEF; */
-  /* box-shadow: 1px 2px 2px 0px #00000040; */
+  font-size: 16px;
 }
-
-
 input[type=search]::-webkit-input-placeholder{
 color: #363B3F;
 }
-
 input[type="search"]::-webkit-search-cancel-button{
 -webkit-appearance: none;
-/* position: relative;
-height: 20px;
-width: 20px;
-background-image: url("../images/dream_story/close.svg");
-background-repeat: no-repeat;
-background-size: contain; */
 }
-
-/* input[type="search"]::-webkit-search-cancel-button::after{
-position: absolute;
-content: "abd";
-left: 25%;
-top: -12%;
-font-size: 60px;
-color: black;
-} */
-
-
 input[type="search"]:focus, input[type="search"]:active{
   outline: none;
   background-color: #ECEDEF;
   border: none;
   color: #363B3F;
 } 
-
 button.search_btn{
   border: none;
   background: none;
   height: 30px;
   cursor: pointer;
-  position: relative;
-  transform: translate(-100%, -10%);
+  position: absolute;
+  right: 0;
 }
-
-img.search{
+button.search:active{
+  outline: none;
+}
+embed.search{
   width: 16px;
 }
-
 div.tags_area{
   /* border: 1px solid #363B3F; */
   display: inline-flex;
@@ -212,7 +254,6 @@ div.tags_area{
   text-align: center;
   width: 100%;
 }
-
 a.tag{
   text-decoration: none;
   color: black;
@@ -223,12 +264,13 @@ a.tag{
   font-size: 14px;
   letter-spacing: 0.04em;
 }
-
 a.tag:hover{
   background-color: #2869D1;
   color: white;
 }
-
+div.cate_align{
+  display: flex;
+}
 a.all_cate{
   text-decoration: none;
   color: white;
@@ -240,7 +282,6 @@ a.all_cate{
   height: 30px;
   margin-top: 10px;
 }
-
 div.all_cate{
   background-color:#2869D1;
   border-radius: 20px;
@@ -250,21 +291,21 @@ div.all_cate{
   padding: 3px 0;
   letter-spacing: 0.1em;
 }
-
-
 div.block_title{
   padding: 10px 0;
   border-bottom: 1px solid black;
   margin-top: 30px;
+  font-size: 20px;
+  font-weight: 700;
 }
-
+div.ad-container{
+  width: 100%;
+}
 div.ad1, div.ad2, div.ad3{
   margin-top: 30px;
-  /* border: 1px solid red; */
   height: 270px;
   width: 100%;
 }
-
 div.ad1{
   background-image: url("../images/dream_story/shop.jpg"); 
   background-repeat: no-repeat;
@@ -276,7 +317,6 @@ div.ad1{
   flex-direction: column;
   justify-content: flex-end;
 }
-
 div.ad2{
   background-image: url("../images/dream_story/sky.jpg"); 
   background-repeat: no-repeat;
@@ -288,7 +328,6 @@ div.ad2{
   flex-direction: column;
   justify-content: flex-end;
 }
-
 div.ad3{
   background-image: url("../images/dream_story/overseas.jpg"); 
   background-repeat: no-repeat;
@@ -300,17 +339,15 @@ div.ad3{
   flex-direction: column;
   justify-content: flex-end;
 }
-
 div.bottom{
-  /* border: 1px solid red; */
   height: 120px;
   border-radius: 0 0 20px 20px;
   background: rgba(255, 255, 255, 0.8);
   padding: 10px 0 0 16px;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
-
 div.ttl{
   color: #363B3F;
   font-size: 24px;
@@ -320,11 +357,9 @@ div.ttl{
   width: 63px;
   font-weight: 700;
 }
-
 div.num{
   margin-top: 10px;
 }
-
 a.enter{
   color: #363B3F;
   text-decoration: none;
@@ -333,15 +368,14 @@ a.enter{
   padding: 10px 16px;
   border-radius: 10px;
   background-color: white;
-  position: relative;
-  transform: translate(185%, -90%); 
+  position: absolute;
+  right: 16px;
+  bottom: 30px;
 }
-
 a.enter:hover{
   background-color: #2869D1;
   color: white;
 }
-
 div.more{
   /* border: 1px solid red; */
   width: 100%;
@@ -349,7 +383,6 @@ div.more{
   justify-content: flex-end;
   margin-top: 20px;
 }
-
 a.more{
   color: black;
   text-decoration: none;
@@ -357,81 +390,197 @@ a.more{
   width: 90px;
   padding-bottom: 2px;
 }
-
 a.more:hover{
   color: #2869D1;
   border-bottom: 1px solid #2869D1;
 }
 
+
+/*====== 行動版 RWD | 320px ~ 414px ======*/
+@media screen and (min-width: 320px) and (max-width: 413.98px){
+
+  div.aside_right{
+    width: 100%;
+    border-top: 1px solid black;
+    margin-top: 10px;
+  }
+  div.search_bar{
+    padding-top: 40px;
+    /* border-top: 1px solid black; */
+  }
+  a.all_cate{
+    margin-bottom: 20px;
+  }
+  div.ttl{
+    font-size: 20px;
+  }
+  div.num{
+    font-size: 14px;
+  }
+  a.enter{
+    width: 90px;
+    padding: 6px 3px;
+    right: 10px;
+    bottom: 32%;
+  }
+}  
+
+/*====== 行動版 RWD | 414px ~ 768px ======*/
+@media screen and (min-width: 414px) and (max-width: 767.98px){
+
+  div.aside_right{
+    width: 100%;
+    border-top: 1px solid black;
+    margin-top: 10px;
+  }
+  div.search_bar{
+    padding-top: 40px;
+    /* border-top: 1px solid black; */
+  }
+  div.cate_align{
+    width: 100%;
+    /* justify-content: center; */
+  }
+  a.all_cate{
+    margin-bottom: 20px;
+    width: 100%;
+    max-width: 576px;
+  }
+  div.ad-container{
+    display: flex;
+    overflow-x: auto;
+    justify-content: flex-start;
+  }
+  div.ad1, div.ad2, div.ad3{
+    width: 45%;
+    min-width: 280px;
+    height: 230px;
+    margin: 30px 16px 0;
+  }
+  div.ttl{
+    font-size: 20px;
+  }
+  div.num{
+    font-size: 14px;
+  }
+  a.enter{
+    width: 85px;
+    padding: 8px 3px;
+    right: 6px;
+    bottom: 30px;
+  }
+  div.bottom{
+    padding-left: 12px;
+  }
+  div.test_area{
+    padding-bottom: 10px;
+  }
+  div.more{
+    justify-content: center;
+  }
+}  
+
+
+/*====== 行動版 RWD | 768px ~ 1150px ======*/
+@media screen and (min-width: 768px) and (max-width: 1149.98px){
+
+  div.aside_right{
+    width: 32%;
+  }
+  div.ad1, div.ad2, div.ad3{
+    height: 200px;
+    width: 100%;
+  }
+  div.ttl{
+    font-size: 20px;
+  }
+  div.bottom{
+    height: 100px;
+  }
+  div.num{
+    display: none;
+  }
+
+}  
+
+
+/*=== 底部文章輪播區域 ===*/
 div.stories{
   width: 1080px;
   margin: 60px auto 20px;
   text-align: center;
 }
-
 div.youmay{
   font-size: 28px;
   font-weight: 700;
 }
-
 div.explore{
   padding: 10px 0;
 }
-
 div.carousel_container{
   margin-bottom: 90px;
 }
-
+div.carousel{
+  align-items: center;
+  position: relative;
+}
 div.slick-list.draggable{
   height: 400px;
-  /* border: 1px solid blue; */
 }
-
 ul.slick-dots{
   display: block;
-  /* border: 1px solid red; */
   height: 90px;
   bottom: -30px;
 }
-
 .slick-prev.slick-arrow:before, .slick-next.slick-arrow:before{
   color: #616870;
   display: block;
+  font-size: 30px;
 } 
-
-
-
-
+.slick-prev.slick-arrow, .slick-next.slick-arrow{
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 40%;
+  transform: translateY(-50%);
+  overflow: hidden;
+}
+.slick-prev.slick-arrow{
+  left: -10px;
+  z-index: 1;
+}
+.slick-next.slick-arrow{
+  right: -10px;
+}
 div.carousel{
   width: 1080px;
-  /* border: 1px solid red; */
   margin: 0 auto;
   display: flex;
+  justify-content: center;
 }
-
 div.slick-dotted.slick-initialized.slick-slider{
   margin-bottom: 0;
 }
-
-div.slide1, div.slide2, div.slide3, div.slide4, div.slide5, div.slide6{
-  margin: 30px 20px;
-  /* border: 1px solid red; */
-  height: 280px;
-  width: 320px;
+a.slick-slide{
+  display: flex !important;
+  justify-content: center !important;
 }
 
-a.story{
+div.slide1, div.slide2, div.slide3, div.slide4, div.slide5, div.slide6{
+  width: 320px;
+  height: 280px;
+  flex-shrink: 0;
+}
+a.story.slick-slide{
   text-decoration: none;
   color: black;
 }
-
 a.story:hover{
   text-decoration: underline;
 }
-
 div.ttlpad{
   /* border: 1px solid red; */
-  height: 120px;
+  height: 45%;
   border-radius: 0 0 20px 20px;
   background: rgba(255, 255, 255, 0.8);
   padding: 20px 0 0 16px;
@@ -441,8 +590,6 @@ div.ttlpad{
   font-weight: 700;
   line-height: 150%;
 }
-
-
 div.slide1{
   background-image: url("../images/dream_story/bookstore.jpg"); 
   background-repeat: no-repeat;
@@ -454,7 +601,6 @@ div.slide1{
   flex-direction: column;
   justify-content: flex-end;
 }
-
 div.slide2{
   background-image: url("../images/dream_story/cafe.jpg"); 
   background-repeat: no-repeat;
@@ -466,7 +612,6 @@ div.slide2{
   flex-direction: column;
   justify-content: flex-end;
 }
-
 div.slide3{
   background-image: url("../images/dream_story/road.jpg"); 
   background-repeat: no-repeat;
@@ -478,7 +623,6 @@ div.slide3{
   flex-direction: column;
   justify-content: flex-end;
 }
-
 div.slide4{
   background-image: url("../images/dream_story/study.jpg"); 
   background-repeat: no-repeat;
@@ -490,7 +634,6 @@ div.slide4{
   flex-direction: column;
   justify-content: flex-end;
 }
-
 div.slide5{
   background-image: url("../images/dream_story/team.png"); 
   background-repeat: no-repeat;
@@ -502,7 +645,6 @@ div.slide5{
   flex-direction: column;
   justify-content: flex-end;
 }
-
 div.slide6{
   background-image: url("../images/dream_story/table.png"); 
   background-repeat: no-repeat;
@@ -515,6 +657,53 @@ div.slide6{
   justify-content: flex-end;
 }
 
+/*====== 行動版 RWD | 320px ~ 768px ======*/
+@media screen and (min-width: 320px) and (max-width: 767.98px){
+
+  div.carousel_container{
+    margin-bottom: 0px;
+  }
+  div.youmay{
+    font-size: 22px;
+  }
+  div.stories, div.carousel{
+    width: 90%;
+  }
+  div.slide1, div.slide2, div.slide3, div.slide4, div.slide5, div.slide6{
+    width: 280px;
+    height: 260px;
+  }
+  .slick-prev.slick-arrow, .slick-next.slick-arrow{
+    transform: translateY(-120%);
+  }
+  div.ttlpad{
+    font-size: 16px;
+    padding-top: 28px;
+  }
+  ul.slick-dots{
+    bottom: 20px;
+  }
+
+
+}  
+
+/*====== 行動版 RWD | 768px ~ 1150px ======*/
+@media screen and (min-width: 768px) and (max-width: 1149.98px){
+
+  div.stories, div.carousel{
+    width: 90%;
+  }
+  div.slide1, div.slide2, div.slide3, div.slide4, div.slide5, div.slide6{
+    width: 300px;
+    height: 280px;
+  }
+  div.ttlpad{
+    padding-left: 12px;
+  }
+  
+  
+
+}  
 
 
 
