--- a/css/check1.css
+++ b/css/check1.css
@@ -7,7 +7,7 @@ form{
 }
 
 input.test_name{
-  width: 70%;
+  width: 80%;
   border-radius: 5px;
   border: none;
   border: 1px solid gray;
@@ -26,3 +26,22 @@ input.test_name::placeholder{
   letter-spacing: 0.04em;
   color: gray;
 }
+
+
+/*====== 行動版 RWD | 320px ~ 768px ======*/
+@media screen and (min-width: 320px) and (max-width: 767.98px){
+
+  input.test_name{
+    width: 100%;
+  }
+
+}  
+
+/*====== 行動版 RWD | 768px ~ 1080px ======*/
+@media screen and (min-width: 768px) and (max-width: 1079.98px){
+
+  input.test_name{
+    width: 80%;
+  }
+
+}  
