--- a/css/check5.css
+++ b/css/check5.css
@@ -21,7 +21,7 @@ input.test_email{
   border: none;
   border: 1px solid gray;
   border-radius: 4px;
-  margin-bottom: 20px;
+  margin: 10px 0 0;
   padding: 5px 0 5px 5px;
 }
 
@@ -37,3 +37,11 @@ input.test_email::placeholder{
   color: gray;
 }
 
+/*====== 行動版 RWD | 320px ~ 768px ======*/
+@media screen and (min-width: 320px) and (max-width: 767.98px){
+
+  input.test_email{
+    width: 100%;
+  }
+
+}  
