--- a/css/header.css
+++ b/css/header.css
@@ -92,14 +92,17 @@ a.logo_top{
 }
 
 nav.nav{
-  width: 50%;
+  width: 80%;
   height: 60px;
   z-index: 2;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 nav.nav ul.nav_list{
   list-style: none;
-  width: 100%;
+  width: 60%;
   padding: 0;
   display: inline-flex;
   align-items: baseline;
@@ -178,7 +181,7 @@ div.login_signup_block{
   width: 20%;
   height: 60px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   padding: 0;
   z-index: 2;
@@ -222,102 +225,121 @@ button.btn_modal_login{
     min-width: 100%;
     justify-content: space-between;
   }
-
   a.logo_top{
     margin-left: 5%;
     width: 25%;
   }
-
   .navFixed{    
     width: 100%;
   }
-
+  div.nav_parent{
+    width: 100%;
+  }
   div.nav_block{
     width: 100%;
   }
 
   div.nav_block{
     position: relative;
+    display: flex;
+    height: auto;
   }
-
   nav.nav{
     margin: 0;
     width: 100%;
     height: 100vh;
-    /* border: 1px solid red; */
     top: 0;
     display: flex;
     flex-direction: column;
-    text-align: right;
-    background: rgba(255, 255, 255, 0.9);;
-    /* background: linear-gradient(180deg, #FFFFFF 0%, rgba(40, 105, 209, 0.5) 348.45%); */
+    background: rgba(255, 255, 255, 0.95);;
     position: absolute;
+    overflow-y: auto;
   }
-
   nav.nav{
     display: none;
   }
-
-  
   ul.nav_list {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
-    width: 100%;
-    transform: translateY(10%);
+    justify-content: center;
+    align-items: center;
+    width: 100% !important;
+    padding: 0 26px !important;
+    transform: translateY(5%);
+    margin: 0 auto !important;
   }
-
   ul.nav_list li{
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 12px;
+    text-align: left;
+    justify-content: flex-start !important;
+    align-items: flex-start;
+    font-size: 16px;
   }
-
-  nav.nav ul.nav_list > li:active{
-    background-color: rgba(247, 204, 197, 0.5);
+  ul.nav_list li a{
+    padding-left: 0 !important;
   }
-
 
   div.login_signup_block{
     width: 100%;
     flex-direction: column;
     text-align: center;
-    position: absolute;
-    top: 900%;
+    margin: 30px 0 50px;
   }
-
   button.btn_modal_login, button.btn_modal_signup{
-    width: 60%;
+    width: 90%;
     height: 36px;
     margin-bottom: 2%;
     padding: 5px 0;
+    border-radius: 5px;
+    font-size: 16px;
   }
-
   div.login_signup_block{
     display: none;
   }
 
+  div.solution_block{
+    padding: 5px 0 !important;
+    width: 100%;
+    text-align: left;
+    height: auto;
+  }
+  span.triangle::after{
+    content: "▾";
+  }
 
   nav.nav > ul.nav_list > li > div.solution_block > ul.solution_list{
-    /* position: absolute; */
     width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     background: none;
+    position: relative; 
+    top: 0;
+    margin-top: 20px;
+    padding-left: 12px;
+  }
+  ul.solution_list{
+    display: none;
   }
 
   nav.nav > ul.nav_list > li > div.solution_block:hover ul.solution_list{
     background: none;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
   }
 
   nav.nav > ul.nav_list > li > div.solution_block > ul.solution_list > li{
-    width: 90px;
+    width: 100%;
   }
-
+  nav.nav > ul.nav_list > li > div.solution_block > ul.solution_list > li > a{
+    display: block;
+    text-align: left;
+    padding: 12px 0 12px 12px !important;
+  }
 
   nav.nav > ul.nav_list > li > div.solution_block > ul.solution_list > li > a:focus{
     background-color: rgba(247, 204, 197, 0.5);
@@ -325,18 +347,7 @@ button.btn_modal_login{
     text-decoration: underline;
   }
   
-  div.solution_block{
-    padding: 0; 
-    width: 100%;
-    text-align: center;
-    height: 80px;
-  }
-
   
-  span.triangle::after{
-    display: none;
-  }
-
   div.hamburger{
     display: inline-flex;
   }
@@ -347,7 +358,7 @@ button.btn_modal_login{
 @media screen and (min-width: 768px){
 
   nav.nav{
-    display: block !important;
+    display: flex !important;
   }
 
   div.login_signup_block{
@@ -382,9 +393,8 @@ button.btn_modal_login{
   }
 
   nav.nav{
-    width: 48%;
-    /* min-width: 320px; */
-    display: block !important;
+    display: flex !important;
+    justify-content: space-around;
   }
 
   ul.nav_list li{
@@ -399,11 +409,11 @@ button.btn_modal_login{
     top: 32px;
   }
 
-  div.login_signup_block{
-    width: 23%;
-    justify-content: center;
-    padding-bottom: 10px;
+ div.login_signup_block{
     display: flex !important;
+    flex-shrink: 0;
+    width: 30%;
+    justify-content: space-around;
   }
 
   button.btn_modal_login, button.btn_modal_signup{
