--- a/css/header.css
+++ b/css/header.css
@@ -245,7 +245,7 @@ button.btn_modal_login{
     height: auto;
   }
   nav.nav{
-    margin: 0;
+    margin: 0 auto;
     width: 100%;
     height: 100vh;
     top: 0;
@@ -262,14 +262,14 @@ button.btn_modal_login{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center !important;
     width: 100% !important;
-    padding: 0 26px !important;
+    padding: 0 !important;
     transform: translateY(5%);
     margin: 0 auto !important;
   }
   ul.nav_list li{
-    width: 100%;
+    width: 90%;
     margin-bottom: 12px;
     text-align: left;
     justify-content: flex-start !important;
