--- a/css/modal2.css
+++ b/css/modal2.css
@@ -9,6 +9,9 @@
   button{
     cursor: pointer;
   }
+  button.close:active{
+    border: none;
+  }
   
   /*====== 登入介面彈窗 ======*/
   /*暗掉滿版背景*/
@@ -32,6 +35,7 @@
     /* min-height: 500px; */
     max-width: 900px;
     overflow-y: auto;
+    overflow-x: hidden;
     border-radius: 10px;
     box-shadow: 0 0 10px #ddd;
     padding: 10px;
@@ -84,7 +88,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 60%;
+    width: 60% !important;
   }
   
   input.modal_email, input.password{
@@ -222,7 +226,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);       
+    transform: translate(-50%, -50%); 
+
   }
 
   /*內容部分*/
@@ -246,6 +251,6 @@
   /*====== RWD 行動版 ======*/
   @media screen and (min-width: 320px) and (max-width: 768px){
     form, div.other_login{
-      width: 80%;
+      width: 80% !important;
     }
   }
