--- a/css/check4.css
+++ b/css/check4.css
@@ -11,8 +11,9 @@ div.leftside{
   /* border: 1px solid red; */
 }
 
-form{
+form.keywords{
   align-items: flex-start;
+  width: 100% !important;
 } 
 #user_name{
   font-weight: 700;
