--- a/css/index.css
+++ b/css/index.css
@@ -762,6 +762,7 @@ button.slick-next.slick-arrow{
   color: #616870;
   display: block;
   font-size: 30px;
+  padding-top: 3px;
 } 
 
   /*====== 行動版 RWD | 320px ~ 414px ======*/
