--- a/css/dream_story.css
+++ b/css/dream_story.css
@@ -569,6 +569,7 @@ ul.slick-dots{
   color: #616870;
   display: block;
   font-size: 30px;
+  padding: 5px 0;
 } 
 .slick-prev.slick-arrow, .slick-next.slick-arrow{
   width: 30px;
@@ -576,7 +577,6 @@ ul.slick-dots{
   position: absolute;
   top: 40%;
   transform: translateY(-50%);
-  overflow: hidden;
 }
 .slick-prev.slick-arrow{
   left: -10px;
