--- a/css/header.css
+++ b/css/header.css
@@ -122,7 +122,7 @@ nav.nav ul.nav_list > li > a{
   padding: 5px 12px;
   color: black;
   letter-spacing: 0.1em;
-  /* border: 1px solid red; */
+  border-bottom: 1px solid transparent;
 }
 
 nav.nav ul.nav_list > li > a:hover{
@@ -285,7 +285,7 @@ button.btn_modal_login{
     width: 100%;
     flex-direction: column;
     text-align: center;
-    margin: 30px 0 50px;
+    margin: 36px 0 50px;
   }
   button.btn_modal_login, button.btn_modal_signup{
     width: 90%;
